themes/wynn/sass/paint/_tabs.sass
// `Tab overrides for site nav
//----------------------------------------------------------------------------------------------------
.hide-on-phones
  dl.tabs
    border: none
    dd
      float: right
      margin: 0 20px
      &:first-child
        margin-left: 0
      a
        background: none
        border: none
        font:
          family: $face-subhead
          size: 12px
          weight: 700
        letter-spacing: 2px
        line-height: 12px
        padding: 0
        text:
          decoration: none
          transform: uppercase

